--- a/FlightBooking_BE-main/build.gradle
+++ b/FlightBooking_BE-main/build.gradle
@@ -49,6 +49,10 @@ dependencies {
 
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.4.0'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	
+	// Excel support
+	implementation 'org.apache.poi:poi:5.2.3'
+	implementation 'org.apache.poi:poi-ooxml:5.2.3'
 	implementation 'org.springdoc:springdoc-openapi-ui:1.8.0'
 	implementation 'org.springframework.boot:spring-boot-starter-mail:3.2.4'
 
