--- a/FlightBooking_BE-main/build.gradle
+++ b/FlightBooking_BE-main/build.gradle
@@ -53,6 +53,10 @@ dependencies {
 	// Excel support
 	implementation 'org.apache.poi:poi:5.2.3'
 	implementation 'org.apache.poi:poi-ooxml:5.2.3'
+	
+	// Logging support
+	implementation 'ch.qos.logback:logback-classic:1.4.11'
+	implementation 'ch.qos.logback:logback-core:1.4.11'
 	implementation 'org.springdoc:springdoc-openapi-ui:1.8.0'
 	implementation 'org.springframework.boot:spring-boot-starter-mail:3.2.4'
 
